# family

./: .gitignore  LICENSE  README.md  __init__.py  blender_manifest.toml  core.py  functions.py  menus.py  operators.py  property_groups.py  pyproject.toml  requirements.txt
addon/: LICENSE  __init__.py  blender_manifest.toml  functions.py  menus.py  operators.py
deliver/: featured_image.psd
modules/: __init__.py  functions.py  operators.py  property_groups.py
