[tool.poetry]
name = "family"
version = "3.3.1"
description = "An addon for Blender with select, duplicate and delete operations in hierarchy"
authors = ["Cunarist <cunarist@gmail.com>"]
license = "GPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
fake-bpy-module-latest = "^20240718"
pyright = "*"
ruff = "*"
