[tool.poetry]
name = "family"
version = "3.4.0"
description = "Select, duplicate and delete objects in hierarchy in Blender"
authors = ["Cunarist <cunarist@gmail.com>"]
license = "GPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
fake-bpy-module-latest = "^20240718"
pyright = "*"
ruff = "*"
